--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <!--[if lt IE9]>
    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <link rel="stylesheet" href="css/site.css" />
  </head>
  <body>
   <header>
-   <div><img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="" width="200" height="200"/></div>
+   <div><img src="img/logo.gif" alt=""/></div>
    <div>This is a site to search Github for interesting projects</div>
    <nav>
     <ul>
@@ -20,7 +21,7 @@
    </nav>
   </header>
   <section>
-    <p>In this <em>sample sites</em>, we'll show a list of <a href="http://www.github.com">
+    <p>In this <em>sample site</em>, we'll show a list of <a href="http://www.github.com">
      Github</a> projects <span>and the data</span> about <strong>those projects</strong>.
     </p>
     <form action="http://wilder.azurewebsites.net/echo" method="post">
@@ -41,7 +42,7 @@
     </form>
   </section>
   <footer>
-   &copy;| 2017 Jolzon Enterprise Solutions Inc &gt; &lt; &#123; &#124; &#125; &#x160;
+   &copy; 2017 Jolzon Enterprise Solutions Inc &gt; &lt; &#123; &#124; &#125; &#x160;
   </footer>
  </body>
 </html>
