FEAT: Styling Your HTML - ID Selectors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      </ul>
    </nav>
   </header>
-  <section>
+  <section id="main">
     <p>In this <em>sample site</em>, we'll show a list of <a href="http://www.github.com">
      Github</a> projects <span>and the data</span> about <strong>those projects</strong>.
     </p>
