FEAT: Styling Your HTML - Relative Selectors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </p>
     <form action="http://wilder.azurewebsites.net/echo" method="post">
      <label for="searchPhrase">Search Phrase:</label>
-     <input name="searchPhrase" id="searchPhrase"/> <br/>
+     <input type="text" name="searchPhrase" id="searchPhrase"/> <br/>
      <input type="checkbox" name="useStars" id="useStars" checked="true">
      <label for="useStars">Use Stars? </label><br />
      <label for="langChoice">Language:</label>
