FEAT: Styling Your HTML - Class Selectors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  </head>
  <body>
   <header>
-   <div><img src="img/logo.gif" alt=""/></div>
+   <div><img src="img/logo.gif" class="bordered-image"/></div>
    <div>This is a site to search Github for interesting projects</div>
    <nav>
     <ul>
@@ -24,7 +24,7 @@
     <p>In this <em>sample site</em>, we'll show a list of <a href="http://www.github.com">
      Github</a> projects <span>and the data</span> about <strong>those projects</strong>.
     </p>
-    <form action="http://wilder.azurewebsites.net/echo" method="post">
+    <form action="http://wilder.azurewebsites.net/echo" method="post" class="bordered-image simple-form">
      <label for="searchPhrase">Search Phrase:</label>
      <input type="text" name="searchPhrase" id="searchPhrase"/> <br/>
      <input type="checkbox" name="useStars" id="useStars" checked="true">
