--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <br/>
       <input type="submit" value="search">
      </form>
+     <div id="results" class="bordered-image">
+      This is where results will live...eventually.
+     </div>
    </section>
    <footer>
     &copy; 2017 Jolzon Enterprise Solutions Inc &gt; &lt; &#123; &#124; &#125; &#x160;
