FEAT: JavaScript - Including JavaScript

--- a/index.html
+++ b/index.html
@@ -49,11 +49,7 @@
     &copy; 2017 Jolzon Enterprise Solutions Inc &gt; &lt; &#123; &#124; &#125; &#x160;
    </footer>
   </div>
-  <script type="text/javascript">
-    var msg = "hello javascript";
-    console.log(msg);
-    var resultsDiv = document.getElementById("results");
-    resultsDiv.innerHTML = "<p>This is from javascript</p>";
+  <script type="text/javascript" src="js/index.js">
   </script>
  </body>
 </html>
